--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MovieStar</string>
+
+    <style name="bottom_navi_search">검색</style>
+    <style name="bottom_navi_bookmark">즐겨찾기</style>
 </resources>
