--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,11 @@
 <resources>
     <string name="app_name">MovieStar</string>
 
-    <style name="search">검색</style>
-    <style name="bookmark">즐겨찾기</style>
+    <string name="search">검색</string>
+    <string name="bookmark">즐겨찾기</string>
 
+    <string name="search_result_empty">검색 결과가 없습니다.</string>
+    <string name="bookmark_result_empty">즐겨찾기 목록이 비었습니다.</string>
+
+    <string name="cancel">취소</string>
 </resources>
